--- a/ProjetoPetShop/src/pet_shop/gui/TelaGenClientes.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaGenClientes.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaGenClientesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaGenClientesController">
    <top>
       <StackPane maxWidth="1.7976931348623157E308" prefHeight="82.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -21,7 +20,7 @@
                   <Font name="Comic Sans MS Bold" size="20.0" />
                </font>
             </Label>
-            <StackPane alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0">
+            <StackPane alignment="TOP_RIGHT" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0">
                <children>
                   <Label fx:id="labelLogin" text="Label">
                      <font>
@@ -35,7 +34,7 @@
             </StackPane>
             <StackPane alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Voltar">
+                  <Button fx:id="btnVoltar" mnemonicParsing="false" onAction="#voltar" text="Voltar">
                      <font>
                         <Font name="Comic Sans MS" size="12.0" />
                      </font>
@@ -51,14 +50,15 @@
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="tbViewClientes" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="443.0" prefWidth="809.0">
+            <TableView fx:id="tbViewClientes" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="431.0" prefWidth="912.0">
               <columns>
                 <TableColumn fx:id="tbColumnNome" prefWidth="75.0" text="Nome" />
                 <TableColumn fx:id="tbColumnCPF" prefWidth="75.0" text="CPF" />
                   <TableColumn fx:id="tbColumnUF" prefWidth="75.0" text="UF" />
+                  <TableColumn fx:id="tbColumnCidade" prefWidth="75.0" text="Cidade" />
                   <TableColumn fx:id="tbColumnRua" prefWidth="75.0" text="Rua" />
                   <TableColumn fx:id="tbColumnBairro" prefWidth="75.0" text="Bairro" />
-                  <TableColumn fx:id="tbColumnNCasa" prefWidth="75.0" text="Nº da Casa" />
+                  <TableColumn fx:id="tbColumnNCasa" prefWidth="50.0" text="Nº da Casa" />
                   <TableColumn fx:id="tbColumnEmail" prefWidth="75.0" text="Email" />
                   <TableColumn fx:id="tbColumnTelefone" prefWidth="75.0" text="Telefone" />
               </columns>
@@ -68,17 +68,17 @@
             </TableView>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="150.0">
                <children>
-                  <Button fx:id="btnCadastrar" mnemonicParsing="false" prefHeight="28.0" prefWidth="90.0" text="Cadastrar">
+                  <Button fx:id="btnCadastrar" mnemonicParsing="false" onAction="#cadastrar" prefHeight="28.0" prefWidth="90.0" text="Cadastrar">
                      <font>
                         <Font name="Comic Sans MS" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnAlterar" mnemonicParsing="false" prefHeight="28.0" prefWidth="90.0" text="Alterar">
+                  <Button fx:id="btnAlterar" mnemonicParsing="false" onAction="#alterar" prefHeight="28.0" prefWidth="90.0" text="Alterar">
                      <font>
                         <Font name="Comic Sans MS" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnExcluir" mnemonicParsing="false" prefHeight="28.0" prefWidth="90.0" text="Excluir">
+                  <Button fx:id="btnExcluir" mnemonicParsing="false" onAction="#excluir" prefHeight="28.0" prefWidth="90.0" text="Excluir">
                      <font>
                         <Font name="Comic Sans MS" size="15.0" />
                      </font>
