--- a/ProjetoPetShop/src/pet_shop/gui/TelaMenu.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaMenu.fxml
@@ -67,7 +67,7 @@
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="btnSair" mnemonicParsing="false" prefHeight="29.0" prefWidth="75.0" text="Sair" GridPane.rowIndex="8">
+            <Button fx:id="btnSair" mnemonicParsing="false" onAction="#voltarLogin" prefHeight="29.0" prefWidth="75.0" text="Sair" GridPane.rowIndex="8">
                <font>
                   <Font name="Comic Sans MS" size="13.0" />
                </font>
@@ -83,7 +83,7 @@
                   <Font name="Comic Sans MS Bold" size="30.0" />
                </font>
             </Label>
-            <StackPane alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="56.0" prefWidth="600.0">
+            <StackPane alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="84.0" prefWidth="800.0">
                <children>
                   <Label fx:id="labelLogin" alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" text="Label">
                      <font>
