--- a/ProjetoPetShop/src/pet_shop/gui/TelaMenu.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaMenu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaPainelInicialDono">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaPainelInicialDono">
    <center>
       <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="460.0" prefWidth="485.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -32,7 +32,7 @@
                <font>
                   <Font name="Comic Sans MS" size="15.0" />
                </font></Button>
-            <Button fx:id="btnGenProdutos" mnemonicParsing="false" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Produtos" GridPane.rowIndex="2">
+            <Button fx:id="btnGenProdutos" mnemonicParsing="false" onAction="#gerenciamentoProdutos" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Produtos" GridPane.rowIndex="2">
                <font>
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
@@ -47,7 +47,7 @@
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="btnGenFuncionarios" mnemonicParsing="false" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Funcionários" GridPane.rowIndex="4">
+            <Button fx:id="btnGenFuncionarios" mnemonicParsing="false" onAction="#gerenciamentoFuncionarios" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Funcionários" GridPane.rowIndex="4">
                <font>
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
