--- a/ProjetoPetShop/src/pet_shop/gui/TelaAlterarServico2.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaAlterarServico2.fxml
@@ -2,16 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaAlterarServico2Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaAlterarServico2Controller">
    <top>
       <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="82.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -91,12 +92,12 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </Label>
-                        <CheckBox fx:id="checkBoxSim" mnemonicParsing="false" text="Sim">
-                           <HBox.margin>
-                              <Insets right="10.0" />
-                           </HBox.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="checkBoxNao" mnemonicParsing="false" text="Não" />
+                        <RadioButton fx:id="rdButtonSim" mnemonicParsing="false" text="Sim">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="Consulta" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="rdButtonNao" mnemonicParsing="false" text="Não" toggleGroup="$Consulta" />
                      </children>
                      <padding>
                         <Insets left="99.0" />
