--- a/ProjetoPetShop/src/pet_shop/gui/TelaGenAtendimentos.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaGenAtendimentos.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaGenAtendimentosController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaGenAtendimentosController">
    <top>
       <StackPane maxWidth="1.7976931348623157E308" prefHeight="82.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -68,8 +68,10 @@
          <children>
             <TableView fx:id="tbViewAtendimentos" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="431.0" prefWidth="912.0">
               <columns>
+                  <TableColumn fx:id="tbColumnNomeDono" prefWidth="75.0" text="Dono" />
                 <TableColumn fx:id="tbColumnAnimal" prefWidth="75.0" text="Animal" />
                   <TableColumn fx:id="tbColumnFuncionario" prefWidth="75.0" text="Funcionario" />
+                  <TableColumn fx:id="tbColumnCpf" prefWidth="75.0" text="CPF do Funcionário" />
                 <TableColumn fx:id="tbColumnServico" prefWidth="75.0" text="Serviço" />
                   <TableColumn fx:id="tbColumnData" prefWidth="75.0" text="Data" />
                   <TableColumn fx:id="tbColumnDiagnostico" prefWidth="75.0" text="Diagnóstico" />
