--- a/ProjetoPetShop/src/pet_shop/gui/TelaCadastroAnimal1.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaCadastroAnimal1.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaCadastroAnimal1Controller">
+<BorderPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@controladores/estilo.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaCadastroAnimal1Controller">
    <top>
       <StackPane maxWidth="1.7976931348623157E308" prefHeight="82.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -35,7 +35,7 @@
             </StackPane>
             <StackPane alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btnVoltar" mnemonicParsing="false" onAction="#voltar" text="Voltar" />
+                  <Button id="glass-grey" fx:id="btnVoltar" mnemonicParsing="false" onAction="#voltar" text="Voltar" />
                </children>
                <StackPane.margin>
                   <Insets left="20.0" />
@@ -43,7 +43,7 @@
             </StackPane>
             <StackPane alignment="BOTTOM_RIGHT" maxWidth="-Infinity" prefHeight="82.0" prefWidth="748.0" StackPane.alignment="BASELINE_RIGHT">
                <children>
-                  <Button fx:id="btnAtualizar" mnemonicParsing="false" onAction="#atualizarAcaoButton" text="Atualizar">
+                  <Button id="glass-grey" fx:id="btnAtualizar" mnemonicParsing="false" onAction="#atualizarAcaoButton" text="Atualizar">
                      <StackPane.margin>
                         <Insets bottom="25.0" right="190.0" />
                      </StackPane.margin>
@@ -53,7 +53,7 @@
                         <Insets bottom="25.0" right="75.0" />
                      </StackPane.margin>
                   </TextField>
-                  <Button fx:id="btnPesquisar" mnemonicParsing="false" onAction="#pesquisarAcaoButton" text="Pesquisar">
+                  <Button id="glass-grey" fx:id="btnPesquisar" mnemonicParsing="false" onAction="#pesquisarAcaoButton" text="Pesquisar">
                      <StackPane.margin>
                         <Insets bottom="25.0" right="10.0" />
                      </StackPane.margin>
@@ -84,7 +84,7 @@
             </TableView>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="150.0">
                <children>
-                  <Button fx:id="btnSelecionar" mnemonicParsing="false" onAction="#selecionar" prefHeight="32.0" prefWidth="120.0" text="Selecionar">
+                  <Button id="glass-green" fx:id="btnSelecionar" mnemonicParsing="false" onAction="#selecionar" prefHeight="32.0" prefWidth="120.0" text="Selecionar">
                      <font>
                         <Font name="Comic Sans MS" size="15.0" />
                      </font>
