--- a/ProjetoPetShop/src/pet_shop/gui/TelaMenuMedico.fxml
+++ b/ProjetoPetShop/src/pet_shop/gui/TelaMenuMedico.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaPainelInicialMedico">
+<BorderPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="600.0" prefWidth="800.0" stylesheets="@controladores/estilo.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pet_shop.gui.controladores.TelaPainelInicialMedico">
    <center>
       <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="460.0" prefWidth="485.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -28,17 +28,17 @@
           <RowConstraints minHeight="10.0" prefHeight="40.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="btnGenAnimais" mnemonicParsing="false" onAction="#genrenciamentoAnimais" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Animais" GridPane.rowIndex="1">
+            <Button id="glass-grey" fx:id="btnGenAnimais" mnemonicParsing="false" onAction="#genrenciamentoAnimais" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Animais" GridPane.rowIndex="1">
                <font>
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="bnGenAtendimentos" mnemonicParsing="false" onAction="#gerenciamentoAtendimentos" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Atendimentos" GridPane.rowIndex="4">
+            <Button id="glass-grey" fx:id="bnGenAtendimentos" mnemonicParsing="false" onAction="#gerenciamentoAtendimentos" prefHeight="39.0" prefWidth="250.0" text="Gerenciamento de Atendimentos" GridPane.rowIndex="2">
                <font>
                   <Font name="Comic Sans MS" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="btnSair" mnemonicParsing="false" onAction="#voltarLogin" prefHeight="29.0" prefWidth="75.0" text="Sair" GridPane.rowIndex="8">
+            <Button id="glass-red" fx:id="btnSair" mnemonicParsing="false" onAction="#voltarLogin" prefHeight="29.0" prefWidth="75.0" text="Sair" GridPane.rowIndex="8">
                <font>
                   <Font name="Comic Sans MS" size="13.0" />
                </font>
